--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.5.7",
     "mongoose": "^5.9.12",
-    "multer": "^1.4.2"
+    "multer": "^1.4.2",
+    "nodemon": "^2.0.4"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
